# rc-insights

./: .gitignore  LICENSE  README.md  SUBMISSION.md  index.html  pyproject.toml  report.html
docs/: blog-post.md  growth-campaign.md  process-log.md  social-posts.md  video-script.md
examples/: generate_report.py  quick_start.py  segmented_analysis.py
rc_insights/: __init__.py  __main__.py  analyzer.py  cli.py  client.py  models.py  report.py
scripts/: make_video.py  publish_devto.py  publish_hashnode.py
tests/: test_analyzer.py  test_client.py  test_models.py
