[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rc-insights"
version = "0.1.0"
description = "Python SDK and CLI for RevenueCat Charts API v2 — subscription analytics made simple"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Mujin (via Claude Agent)", email = "maruyamakoju@gmail.com"},
]
keywords = ["revenuecat", "charts", "subscriptions", "analytics", "mrr", "saas"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.25.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "plotly>=5.18.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
]

[project.scripts]
rc-insights = "rc_insights.cli:cli"

[project.urls]
Homepage = "https://github.com/maruyamakoju/rc-insights"
Documentation = "https://github.com/maruyamakoju/rc-insights#readme"
Issues = "https://github.com/maruyamakoju/rc-insights/issues"

[tool.setuptools.packages.find]
include = ["rc_insights*"]
